# polar-embed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bench/: RESULTS.md  fetch_specter2_cache.sh  hybrid_precision_eval.py  real_embedding_eval.py  specter2_eval.py
docs/: integration-guide.md  scale-architecture.md
docs/research/: hybrid-precision-quantization.md
mojo/bench/: RESULTS.md
mojo/tests/: test_gpu_encode.mojo
polar_embed/: __init__.py  core.py
polarquant/: core.py
remex/: __init__.py  core.py  ivf.py  pq_format.py
remex/mojo/: README.md  polarquant.mojo
remex/mojo/bench/: compare.py
remex/mojo/src/: codebook.mojo  npy.mojo  quantizer.mojo  rotation.mojo
remex/mojo/src/gpu/: adc.mojo  encode.mojo
remex/mojo/tests/: test_search_twostage.mojo
tests/: test_ivf.py  test_polar_embed.py  test_polarquant.py
