[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarquant"
version = "0.1.0"
description = "Data-oblivious vector quantization for embedding compression"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Oskar Austegard"}]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
bench = ["faiss-cpu", "sentence-transformers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
